<resources>
    <string name="app_name" translatable="false">Xet</string>

    <string name="errcode_placeholder" translatable="false">[MISSING STRING RESOURCE FOR ERROR CODE]</string>

    <!-- login activity -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_btn">Sign in</string>
    <string name="login_btn_short">Sign in</string>
    <string name="login_invalid_username">Full name must not be empty</string>
    <string name="login_invalid_password">Password must not be empty</string>
    <string name="login_failed_error">"Login failed"</string>
    <string name="login_title">Sign in</string>
    <string name="login_create_account">Don\'t have an account? Click here!</string>

    <!-- signup activity -->
    <string name="signup_title">Sign up</string>
    <string name="signup_full_name">Full name</string>
    <string name="signup_login">Already got an account? Click here!</string>
    <string name="signup_invalid_full_name">Full name must not be empty</string>
    <string name="signup_invalid_username">Username must not be empty</string>
    <string name="signup_invalid_password">Password must have at least 8 characters</string>
    <string name="signup_failed_error">"Sign up failed"</string>
    <string name="signup_btn">Sign up</string>

    <!-- friends list fragment -->
    <string name="friends_user_error">Could not load user</string>
    <string name="friends_item_image">Placeholder</string>
    <string name="friends_item_status">status</string>
    <string name="friends_item_last_message">Hey, u owe me!</string>
    <string name="friends_item_name">Pedro Pinto</string>
    <string name="friends_item_profile_letter">P</string>
    <string name="friends_fail">Failed to load contacts</string>
    <string name="friends_empty">You do not have any contact</string>

    <!-- search fragment -->
    <string name="search_input_label">Search</string>
    <string name="search_contact_button">Square with a magnifying glass on the middle</string>
    <string name="search_friend_description">Chat bubble icon that represents a friend</string>
    <string name="search_pending_description">Clock icon that represents a friendship invite is pending</string>
    <string name="search_send_icon">Send icon that represents a invite can be sent to the user</string>
    <string name="search_list_empty">Could not find any user matching your query</string>
    <string name="search_list_error">Could not load users</string>
    <string name="search_invite_sent_successfully">Invite sent to user</string>
    <string name="search_invite_sent_fail">Could not send invite</string>

    <!-- profile fragment -->
    <string name="profile_title">Profile</string>
    <string name="profile_invites_title">Invites</string>
    <string name="profile_update_btn">Update</string>
    <string name="profile_load_error">Error while retrieving your information</string>
    <string name="profile_invites_empty">You do not have any pending invite</string>
    <string name="profile_invites_error">Error while retrieving your invites</string>
    <string name="profile_update_success">Profile updated!</string>
    <string name="profile_update_fail">Something went wrong while updating your profile</string>
    <string name="profile_invite_update_accepted">Invite accepted!</string>
    <string name="profile_invite_update_refused">Invite refused!</string>
    <string name="profile_invite_update_fail">Something went wrong while updating your profile</string>

    <!-- chat activity -->
    <string name="chat_message_date">12/12/2012 19:03:35</string>
    <string name="chat_message_text">Oops, and those 100zao you took last week and you still haven\'t given a sign of when you\'re going to pay me. If you call man, you\'re going to lose some fingers</string>
    <string name="chat_input_hint">Message</string>
    <string name="chat_title">Alfredo Alvarez</string>
    <string name="chat_input_btn_text">Icon representing a plane to send message</string>
    <string name="chat_no_messages">You guys haven\'t exchanged messages yet. Go on and say hello!</string>
    <string name="chat_error">Could\'t load messages.</string>
    <string name="chat_send_error">Could\'t send message.</string>
    <string name="chat_bubble_audio_btn_desc">Icon to interact with audio</string>
    <string name="audio_error">There was an error while trying to play audio</string>

    <!-- general -->
    <string name="main_logo">Xet logo</string>
    <string name="menu_chat">Chats</string>
    <string name="menu_search">Search</string>
    <string name="menu_profile">Profile</string>
    <string name="status_online">online</string>
    <string name="status_offline">offline</string>
    <string name="login_in">Singing in…</string>
    <string name="signing_up">Singing up…</string>
    <string name="updating">Updating…</string>
    <string name="check_icon_description">A check icon</string>
    <string name="close_icon_description">A close icon</string>
    <string name="storage_permission_granted">Permission granted</string>
    <string name="storage_permission_denied">Permission denied</string>
    <string name="sent_friend_request">Friendship request sent</string>
    <string name="received_friend_request">Received friendship request</string>

    <string name="username_in_use">This username is already in use</string>
    <string name="errcode_no_response" >No response</string>
    <string name="errcode_malformed_request" >Malformed request</string>
    <string name="errcode_token_exired" >Token expired</string>
    <string name="errcode_unknown_operation" >Unknown operation</string>
    <string name="errcode_no_user_with_given_id" >No user with the given ID</string>
    <string name="errcode_failed_to_parse_json" >Failed to parse the request JSON</string>
    <string name="errcode_not_friends" >Not Friends</string>
</resources>