<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".presentation.login.LoginActivity">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/main_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="false"
        app:srcCompat="@drawable/main_logo" />

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/login_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="@+id/loginUsernameLabel"
        app:layout_constraintTop_toBottomOf="@+id/loginLogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginUsernameLabel"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:clipToPadding="false"
        android:hint="@string/login_username"
        android:labelFor="@+id/loginUsername"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@string/login_username"
            android:drawableEnd="@drawable/ic_outline_person_outline_24"
            android:hint="@string/login_username"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColorHighlight="?colorPrimary"
            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPasswordLabel"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/login_password"
        android:labelFor="@+id/loginPassword"
        android:padding="0dp"
        app:boxCollapsedPaddingTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginUsernameLabel">

        <EditText
            android:id="@+id/loginPassword"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="0dp"
            android:autofillHints="@string/login_password"
            android:drawableEnd="@drawable/ic_outline_lock_24"
            android:imeActionLabel="@string/login_btn_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColorHint="#546E7A"
            tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="64dp"
        android:enabled="false"
        android:paddingHorizontal="48dp"
        android:text="@string/login_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordLabel"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ProgressBar
        android:id="@+id/loginLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordLabel"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/login_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:gravity="center|center_horizontal|center_vertical"
        android:minHeight="48dp"
        android:onClick="onClick"
        android:text="@string/login_create_account"
        android:textColor="?colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>