<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:layout_marginBaseline="16dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorSecondaryVariant"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="16dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:cardCornerRadius="32dp"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/contact_search_item_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/friends_item_profile_letter"
                    android:background="?colorPrimary"
                    android:textColor="?colorOnPrimary"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginStart="16dp">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/contact_search_item_name"
                    android:layout_width="0dp"
                    android:gravity="center_vertical"
                    android:layout_height="match_parent"
                    android:text="@string/friends_item_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <ImageButton
                    android:id="@+id/contact_search_item_btn"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:src="@drawable/ic_baseline_send_24"
                    android:contentDescription="@string/search_send_icon" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>