<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.profile.ProfileFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/profileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_title"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <FrameLayout
            android:id="@+id/profilePictureContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/profileTitle">
            <androidx.cardview.widget.CardView
                android:layout_width="128dp"
                android:layout_height="128dp"
                app:cardCornerRadius="64dp"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/profilePicture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/friends_item_profile_letter"
                    android:background="?colorPrimary"
                    android:textColor="?colorOnPrimary"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileNameLabel"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:clipToPadding="false"
            android:hint="@string/login_username"
            android:labelFor="@+id/loginUsername"
            android:padding="0dp"
            app:layout_constraintTop_toBottomOf="@+id/profilePictureContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileNameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/login_username"
                android:drawableEnd="@drawable/ic_outline_person_outline_24"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textColorHighlight="?colorPrimary"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileUsernameLabel"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:clipToPadding="false"
            android:hint="@string/signup_full_name"
            android:labelFor="@+id/profileUsernameInput"
            android:padding="0dp"
            app:layout_constraintTop_toBottomOf="@+id/profileNameLabel">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profileUsernameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/signup_full_name"
                android:drawableEnd="@drawable/ic_outline_person_outline_24"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textColorHighlight="?colorPrimary"
                tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/profileUpdateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="32dp"
            android:enabled="false"
            android:paddingHorizontal="48dp"
            android:text="@string/profile_update_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileUsernameLabel"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/profileInvitesTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_invites_title"
            android:gravity="center_horizontal"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/profileUpdateBtn"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/profileInvitesTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/profileInvitesLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent" />
        </FrameLayout>

        <TextView
            android:id="@+id/profileInvitesMessage"
            app:layout_constraintTop_toBottomOf="@+id/profileInvitesTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profileInvites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:visibility="gone"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/profileInvitesTitle"
            tools:listitem="@layout/invite_list_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>